--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "vue": "^2.6.14"
   },
   "devDependencies": {
